Update travis to use matrix instead of tox
Instead of executing the test matrix using tox, we now use a travis-native
matrix.

We also simplify the requirements.txt file to just include what is needed
for running tests. I.e. we drop requirements needed only for building docs
(Sphinx) and making releases (twine).

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,27 @@
+dist: trusty
+sudo: false
+
 language: python
 
-python:
-  - "3.5"
-
-env:
-  - TOXENV=py27
-  - TOXENV=py34
-  - TOXENV=py35
-  - TOXENV=pypy
-#  - TOXENV=pypy3
-  - TOXENV=flake8
+matrix:
+  include:
+    - python: '2.7'
+    - python: 'pypy'
+    - python: '3.3'
+    - python: '3.4'
+    - python: '3.5'
+    - python: '3.6'
+    - python: 'pypy3'
 
 install:
-  - pip install tox
+  - pip install --upgrade -r requirements.txt
+  - pip install coveralls
+  - pip install -e .
 
-script: tox
+script: py.test --flake8 --cov
+
+after_success:
+  coveralls
+
+cache:
+  - pip
