Add isort config to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,11 @@ universal = 1
 
 [tool:pytest]
 addopts = --doctest-glob='*.rst'
+
+[isort]
+force_grid_wrap = 0
+from_first = True
+include_trailing_comma = True
+line_length = 79
+multi_line_output = 3
+use_parentheses = True
