Add inline type annotations
All classes, functions, and methods now have inline type annotations that
may be statically checked using a tool such as MyPy.

The annotations add negligible import-time performance overhead. A few
isinstance() assertions have also been added, but with care taken to avoid
such dynamic type checks in the performance-critical VCDWriter.change()
code paths.

The exercise of adding these type hints and checking them with mypy
revealed several subtle and not-so-subtle bugs, most of which were resolved
in the commits immediately preceding this one.

The hope is that these type hints will be useful to pyvcd clients that want
to incorporate type annotation and type checking into their code.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
 install:
   - |
     if [ "$MAKE_TARGET" = "lint" ]; then
-      pip install black
+      pip install black mypy
     fi
   - |
     if [ "$MAKE_TARGET" = "coverage" ]; then
