--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,15 @@ universal = 1
 addopts = --doctest-glob='*.rst'
 
 [flake8]
+max-line-length = 88
+ignore = E203, E501, W503
 exclude = build/, .*/
 
 [isort]
 force_grid_wrap = 0
 from_first = True
 include_trailing_comma = True
-line_length = 79
+line_length = 88
 multi_line_output = 3
 use_parentheses = True
 skip_glob = .*
