Update travis to use bionic
This is a general modernization of .travis.yml.

Use Ubuntu 18.04 "bionic" distribution. Python 2.7, 3.6, 3.7, and 3.8 are
native to travis' bionic dist.

Drop Python 3.4 and 3.5 from the test matrix. These are not in bionic and
pyvcd is dropping support for older Python versions soon.

Use multi-line yaml strings for multi-line script snippets.

Use 'pytest' instead 'py.test'; the former seems to be the canonical name.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,35 @@
-group: travis_latest
 language: python
+os: linux
+dist: bionic
 cache: pip
 
-matrix:
+jobs:
   include:
     - python: '3.8'
-      dist: xenial
       env: COVERAGE=--cov
     - python: '3.7'
     - python: '3.6'
-    - python: '3.5'
-    - python: '3.4'
     - python: 'pypy3'
     - python: '2.7'
       env: COVERAGE=--cov
     - python: 'pypy'
+    - python: 'nightly'
   allow_failures:
     - python: 'nightly'
 
 install:
   - pip install --upgrade -r requirements.txt
-  - if [ -n "$COVERAGE" ]; then pip install coveralls; fi
+  - |
+    if [ -n "$COVERAGE" ]; then
+      pip install coveralls
+    fi
   - pip install -e .
 
 script:
-  - py.test --flake8 $COVERAGE
+  - pytest --flake8 $COVERAGE
 
 after_success:
-  - if [ -n "$COVERAGE" ]; then coveralls; fi
+  - |
+    if [ -n "$COVERAGE" ]; then
+      coveralls
+    fi
