Add top-level helper Makefile
The new top-level Makefile makes documents the various useful commands that
can be run. And it helps invoke said commands in a uniform manner.

The travis config is updated to invoke the Makefile's lint, test, and
coverage targets.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ universal = 1
 [tool:pytest]
 addopts = --doctest-glob='*.rst'
 
+[flake8]
+exclude = build/, .*/
+
 [isort]
 force_grid_wrap = 0
 from_first = True
