--- a/.travis.yml
+++ b/.travis.yml
@@ -3,30 +3,37 @@ os: linux
 dist: bionic
 cache: pip
 
+python:
+  - '3.8'
+  - '3.7'
+  - '3.6'
+  - 'pypy3'
+  - 'nightly'
+
+env:
+  - MAKE_TARGET=test
+
 jobs:
   include:
     - python: '3.8'
-      env: COVERAGE=--cov
-    - python: '3.7'
-    - python: '3.6'
-    - python: 'pypy3'
-    - python: 'nightly'
+      env: MAKE_TARGET=lint
+    - python: '3.8'
+      env: MAKE_TARGET=coverage
   allow_failures:
     - python: 'nightly'
 
 install:
-  - pip install --upgrade -r requirements.txt
   - |
-    if [ -n "$COVERAGE" ]; then
+    if [ "$MAKE_TARGET" = "coverage" ]; then
       pip install coveralls
     fi
-  - pip install -e .
+  - pip install --upgrade -r requirements.txt -e .
 
 script:
-  - pytest --flake8 $COVERAGE
+  - make "$MAKE_TARGET"
 
 after_success:
   - |
-    if [ -n "$COVERAGE" ]; then
+    if [ "$MAKE_TARGET" = "coverage" ]; then
       coveralls
     fi
