--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py27,py34,py35,py36,pypy,pypy3,flake8
+envlist = py36,py37,py38,pypy3,flake8
 
 [testenv]
 deps = -rrequirements.txt
-commands = py.test tests {posargs}
+commands = pytest tests {posargs}
 
 [testenv:flake8]
 deps = -rrequirements.txt
