Add black and mypy to requirements.txt
They are conditional on cpython because currently neither tool can be
installed in a pypy environment.

https://github.com/psf/black/issues/727
https://github.com/python/typed_ast/issues/111

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+black >= 19.10b0; implementation_name == "cpython"
 flake8
 isort
+mypy >= 0.770; implementation_name == "cpython"
 pytest
 pytest-cov
 setuptools_scm
