--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install -U pip
-        python -m pip install -e . -r requirements.txt black mypy
+        python -m pip install -e . -r requirements.txt
     - name: Lint
       run: |
         make lint
