--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - run: git fetch --prune --unshallow origin +refs/tags/*:refs/tags/*
+    - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.8'
 
     - name: Install dependencies
       run: |
@@ -35,24 +33,6 @@ jobs:
       with:
         name: pyvcd-dist
         path: "dist/*"
-
-    ## TODO: upload-artifact@v2-preview insists on wrapping artifacts in a zip
-    ## file. The config below ends up creating downloads which are individual
-    ## zip files each containing a single compressed tar.gz or .whl file.
-    ## Therefore, for the time being, use the above config that creates a
-    ## single pyvcd-dist.zip artifact with both the sdist and wheel inside.
-
-    # - name: Upload sdist
-    #   uses: actions/upload-artifact@v2-preview
-    #   with:
-    #     name: sdist
-    #     path: "dist/pyvcd*.tar.gz"
-
-    # - name: Upload wheel
-    #   uses: actions/upload-artifact@v2-preview
-    #   with:
-    #     name: wheel
-    #     path: "dist/pyvcd*.whl"
 
   test:
     runs-on: ubuntu-latest
@@ -78,16 +58,12 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.8'
     - name: Install dependencies
       run: |
         python -m pip install -U pip
@@ -98,16 +74,12 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.8'
     - name: Install dependencies
       run: |
         python -m pip install -U pip
