Upgrade to isort 5.0
isort 5.0 has a new --profile=black option that replaces the custom
black-compatible configuration. The --recursive option is also deprecated
in isort 5.0, so the Makefile is updated accordingly.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 black >= 19.10b0; implementation_name == "cpython"
 flake8
-isort
+isort >= 5.0.5
 mypy >= 0.770; implementation_name == "cpython"
 pytest
 pytest-cov
