--- a/setup.cfg
+++ b/setup.cfg
@@ -47,10 +47,5 @@ ignore = E203, E501, W503
 exclude = build/, .*/
 
 [isort]
-force_grid_wrap = 0
-from_first = True
-include_trailing_comma = True
-line_length = 88
-multi_line_output = 3
-use_parentheses = True
+profile = black
 skip_glob = .*
