Add long_description_content_type to setup.cfg
This resolves a warning from `twine check`.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Peter Grayson
 author_email = pete@jpgrayson.net
 description = Python VCD file support
 long_description = file: README.rst, LICENSE.txt
+long_description_content_type = text/x-rst
 url = http://pyvcd.readthedocs.io/en/latest/
 download_url = https://github.com/SanDisk-Open-Source/pyvcd
 license = MIT
