build: replace license_file with license_files
The license_file option was deprecated in setuptools v56.0.0.

The license_files option was added in setuptools v42.0.0, which is earlier
than the current v45 minimum requirement.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ long_description_content_type = text/x-rst
 url = http://pyvcd.readthedocs.io/en/latest/
 download_url = https://github.com/westerndigitalcorporation/pyvcd
 license = MIT
-license_file = LICENSE.txt
+license_files = LICENSE.txt,
 classifiers =
     Development Status :: 4 - Beta
     Environment :: Console
