--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install -U pip
-        python -m pip install setuptools_scm wheel
+        python -m pip install build setuptools_scm wheel
 
     - name: Build
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
 
     - name: Upload dist
       uses: actions/upload-artifact@v3
