--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,19 +35,32 @@ jobs:
         name: pyvcd-dist
         path: "dist/*"
 
-    # - name: Test Publish package
-    #   uses: pypa/gh-action-pypi-publish@master
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.test_pypi_password }}
-    #     repository_url: https://test.pypi.org/legacy/
+  publish:
+    runs-on: ubuntu-latest
+    environment:
+      - name: pypi
+      - url: https://pypi.org/p/pyvcd
+    permissions:
+      id-token: write
+
+    steps:
+    - name: Retrieve package
+      uses: actions/download-artifact@v3
+      with:
+        name: pyvcd-dist
+        path: "dist"
+
+    - name: Display dist files
+      run: ls -Rl
+
+    - name: Test Publish package
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository_url: https://test.pypi.org/legacy/
 
     - name: Publish package
-      if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.pypi_password }}
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1
 
   test:
     runs-on: ubuntu-latest
