ci: disable test publish step
This does not and cannot be enabled all the time due to non-tagged package
versions being disallowed by PyPI.

Also replace deprecated repository_url key with repository-url.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,10 +53,10 @@ jobs:
     - name: Display dist files
       run: ls -Rl
 
-    - name: Test Publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository_url: https://test.pypi.org/legacy/
+    # - name: Test Publish package
+    #   uses: pypa/gh-action-pypi-publish@release/v1
+    #   with:
+    #     repository-url: https://test.pypi.org/legacy/
 
     - name: Publish package
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
