--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,16 @@ jobs:
         python -m build
 
     - name: Upload dist
+      if: github.repository == 'westerndigitalcorporation/pyvcd'
       uses: actions/upload-artifact@v3
       with:
         name: pyvcd-dist
         path: "dist/*"
 
   publish:
+    if: github.repository == 'westerndigitalcorporation/pyvcd'
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: pypi
       url: https://pypi.org/p/pyvcd
@@ -101,6 +104,7 @@ jobs:
         make lint
 
   coverage:
+    if: github.repository == 'westerndigitalcorporation/pyvcd'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
