--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,5 +8,9 @@ build:
   tools:
     python: "3.12"
 
+python:
+  install:
+    - requirements: docs/requirements.txt
+
 sphinx:
   configuration: docs/conf.py
